[project]
name = "dresslar-cas522"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
]
